--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -29,7 +29,7 @@ spec:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-          volumesMounts:
+          volumeMounts:
           - name: sail-cfg
             mountPath: "/app"
             readOnly: true
