--- a/templates/mysql-deploy.yaml
+++ b/templates/mysql-deploy.yaml
@@ -1,4 +1,18 @@
 {{- if .Values.needMysql -}}
+apiVersion: v1
+kind: Service
+metadata:
+  name: mysql
+  labels:
+    app: mysql
+spec:
+  ports:
+  - name: mysql
+    port: 3306
+  clusterIP: None
+  selector:
+    app: mysql
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -6,7 +20,6 @@ metadata:
   label:
     app: mysql
 spec:
-  serviceName: mysql
   selector:
     matchLabels:
       app: mysql
