--- a/values.yaml
+++ b/values.yaml
@@ -35,13 +35,13 @@ config: |-
   connMaxLifeTime = "3m"
   maxIdleConn = 30
   maxOpenConn = 60
-  addr = "mysql-0:3306"
+  addr = "mysql:3306"
   name = "sail"
   pass = "root"
   user = "root"
 
   [etcd]
-  endpoints = ["etcd:2379"]
+  endpoints = ["etcd-0:2379"]
   username = ""
   password = ""
   dialTimeout = "10s"
