--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -31,8 +31,8 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           volumeMounts:
           - name: sail-cfg
-            mountPath: "/app"
-            readOnly: true
+            mountPath: "/app/cfg.toml"
+            subPath: "cfg.toml"
           ports:
             - name: http
               containerPort: 8108
