--- a/templates/mysql-service.yaml
+++ b/templates/mysql-service.yaml
@@ -6,10 +6,10 @@ metadata:
   labels:
     app: mysql
 spec:
+  type: ClusterIP
   ports:
   - name: mysql
     port: 3306
-  clusterIP: None
   selector:
     app: mysql
 {{- end}}
