--- a/templates/mysql-deploy.yaml
+++ b/templates/mysql-deploy.yaml
@@ -19,6 +19,9 @@ spec:
       containers:
       - image: mysql:5.7
         name: mysql
+        args:
+          - "--character-set-server=utf8mb4"
+          - "--collation-server=utf8mb4_unicode_ci"
         livenessProbe:
           exec:
             command: ["mysqladmin", "ping", "-uping", "-ppinger"]
